@startuml
'https://plantuml.com/sequence-diagram

entity Cuerda{
codigo
precio
stock
tipo de instrumento
tipo de cuerda
numero de cuerda
material de construccion
tipo
}
entity Percusion{
codigo
precio
stock
tipo de instrumento
tipo de percusion
meterial de construccion
altura
}
entity Viento{
codigo
precio
stock
tipo de instrumento
material de construccion
}

entity trabajador{
nombre
apellido
rut
}


trabajador "1" -- "1..*" Cuerda : administra >
trabajador "1" -- "1..*" Percusion : administra >
trabajador "1" -- "1..*" Viento : administra >

@enduml